<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Correct_ans">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/outline"
        android:padding="20dp">

        <Button
            android:id="@+id/back_buttton"
            style="@style/backstyle"
            />
        <ImageView
            android:id="@+id/board"
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/b2written" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/celebration"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:src="@drawable/ballons"/>
        <ImageView
            android:id="@+id/correctimg"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/correct"/>
        <TextView
            android:id="@+id/congotxt"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            style="@style/logostyle"
            android:text="@string/congratulation" />
        <TextView
            android:id="@+id/correcttxt"
            android:layout_below="@id/correctimg"
            android:layout_centerHorizontal="true"
            android:textStyle="italic"
            style="@style/logostyle"
            android:text="@string/correctans" />



        <Button
            android:id="@+id/cont"
            style="@style/buttonstyles"
            android:layout_below="@id/correcttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="136dp"
            android:layout_marginTop="20dp"
            android:background="@color/yellow"
            android:text="@string/cont" />
    </RelativeLayout>

</RelativeLayout>