<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/outline">
    <Button
        android:id="@+id/back_buttton"
        style="@style/backstyle"
        />

    <ImageView
        android:id="@+id/board"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/b2written" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:id="@+id/area"
        android:orientation="vertical"
        android:background="@drawable/woodbg">

        <TextView
            android:id="@+id/logo"
            android:textColor="@color/white"
            style="@style/logostyle"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:text="@string/register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="10dp"
        android:background="@color/transparent">

        <com.google.android.material.textfield.TextInputLayout
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:counterTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/name"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fullName"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/username"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/username"
                android:inputType="text">


            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:passwordToggleTint="@color/black"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pass1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reenter_pass"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:passwordToggleTint="@color/black"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pass2"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/register"
        style="@style/buttonstyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:text="@string/submit" />




</RelativeLayout>